--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-torch==2.5.1 --index-url https://download.pytorch.org/whl/cu121
+# Install PyTorch with CUDA support as needed.
+# For example, if using CUDA 12.6, run:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
+
 openai-whisper
-transformers
-sounddevice
-numpy
-scipy
-pyyaml
-requests
+sounddevice>=0.4.6
+numpy>=1.24
+scipy>=1.10.0
+webrtcvad
+requests>=2.31.0
+pyyaml>=6.0.1
 snac
